refactor: delete UsersRolesRepostirory. fix: test for RoleRepository had errors